--- a/.github/workflows/maven-deploy.yml
+++ b/.github/workflows/maven-deploy.yml
@@ -24,6 +24,13 @@ jobs:
           java-version: 11
           cache: maven
       - name: Publish artifact
-        run: cd '${{ inputs.directory }}' && mvn -B clean deploy
+        run: |
+          cd '${{ inputs.directory }}'
+          echo ${GITHUB_REF##*/}
+          version=$(mvn help:evaluate -Dexpression=project.version -DforceStdout -q)
+          if [[ "$version" != *SNAPSHOT ]]; then
+            mvn versions:set versions:commit -DnewVersion="${version}-SNAPSHOT"
+          fi
+          mvn -B clean deploy
         env:
           GITHUB_TOKEN: ${{ secrets.token }}
