--- a/.github/workflows/maven-deploy.yml
+++ b/.github/workflows/maven-deploy.yml
@@ -33,6 +33,7 @@ jobs:
           echo "debug3"
           branch=${GITHUB_REF##*/}
           echo "$branch"
+          mvn help:evaluate -Dexpression=project.version
           version=$(mvn help:evaluate -Dexpression=project.version -DforceStdout)
           echo "$version"
 
